# rubrik

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  bootstrap.toml.example  build_docs.py  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt  run_analysis.py  transcript_intelligence.ipynb  validate.py
.github/workflows/: ci.yml  migration-rt.yml
alembic/: README.md  env.py
alembic/versions/: 20260506_0001_initial_schema.py  20260507_0002_outbox_events.py  20260507_0003_outbox_trace_id.py  20260508_0004_meetings_table.py  20260509_0005_audit_forensics.py
api/: __init__.py  adaptive_throttle.py  admin_app.py  auth.py  backpressure.py  cache.py  caching.py  circuit_breaker.py  csrf.py  errors.py  idempotency.py  jobs.py  jwt_auth.py  limiter.py  llm_gateway.py  main.py  metrics.py  middleware.py  models.py  observability.py  outbox.py  outbox_kafka.py  routes.py  search.py  snapshot.py  snapshot_writer.py  state.py
api/admin/: __init__.py  auth.py  gdpr.py  routes.py  schemas.py  totp.py
deploy/: Caddyfile  cdn-runbook.md  compose-full.yml  dr-runbook.md  gdpr-runbook.md  incident-runbooks.md  sev1-runbook.md  slos.md
deploy/grafana/: transcript-intel.json
deploy/k8s/: argo-rollout.yaml  cluster-autoscaler.yaml  deployment.yaml  gateway.yaml  hpa.yaml  kafka.yaml  keda-scaledobjects.yaml  migrate-job.yaml  otel-collector.yaml  pgbouncer.yaml  prometheus-adapter-rules.yaml  prometheus-slo-rules.yaml  redis.yaml  snapshot-cronjob.yaml  worker.yaml
docs/: APPROACH.md  ARCHITECTURE.md  edge-cases.md  presentation.html
docs/adr/: 0001-record-architecture-decisions.md  0002-hybrid-categorization.md  0003-self-host-summarization-with-gemma-4.md  0004-fastapi-over-streamlit.md  0005-no-database-persistence.md  0006-api-key-auth-defer-jwt.md  0007-sentence-level-sentiment-trajectories.md  0008-data-layer-for-scale.md  0009-admin-panel-for-runtime-config.md  0010-auto-scaling-ml-pipeline.md  0011-repository-pattern-and-streaming.md  0012-llm-cascade-frontier-fallback.md  0013-api-tier-auto-scaling.md  0014-cloud-agnostic-split-plane-architecture.md  README.md
docs/html/: approach.html  architecture.html  index.html
gemma-finetune/: README.md
gemma-finetune/adapters/v1-r4-3ep/: attendee-12-rubrik-r1.json
gemma-finetune/adapters/v1-r4-3ep/attendee-12-rubrik-r1.adapter/: adapter_config.json
gemma-finetune/adapters/v2-r16-5ep/attendee-12-rubrik-v2-r1.adapter/: README.md  adapter_config.json
gemma-finetune/adapters/v3-e4b-allrec/: attendee-12-v3-r1.json
gemma-finetune/adapters/v3-e4b-allrec/attendee-12-v3-r1.adapter/: README.md  adapter_config.json
gemma-finetune/adapters/v4-tuned/: attendee-12-v4-r1.json
gemma-finetune/adapters/v4-tuned/attendee-12-v4-r1.adapter/: adapter_config.json
gemma-finetune/code/: build_rubrik_jsonl.py  finetune_v3.py  finetune_v4.py  judge.py  judge_compare.py  test_v3.py
gemma-finetune/data/: rubrik_eval_prompts.json
gemma-finetune/results/: v1-r4-3ep-compare.md  v2-r16-5ep-compare.md  v2-r16-5ep-metrics.json  v3-e4b-allrec-compare.md  v4-tuned-compare.md
gemma-finetune/scaling/: README.md  active_learning.py  data_pipeline.py  eval_harness.py  train_distributed.py
gemma-finetune/scaling/k8s/: hpa.yaml  karpenter-nodepool.yaml  serving-deployment.yaml  train-job.yaml
src/: __init__.py  categorizer.py  clustering.py  config.py  data_loader.py  db.py  insights.py  logging_config.py  models_db.py  pii.py  repository.py  runtime_settings.py  sentiment.py  settings.py  streaming.py  tenant.py  visualizations.py
tests/: conftest.py  smoke_test.py  test_adaptive_throttle.py  test_admin.py  test_admin_app.py  test_api.py  test_autoscaling.py  test_cache_module.py  test_cache_stampede.py  test_cached_repository.py  test_caching.py  test_categorizer.py  test_clustering.py  test_data_loader.py  test_database_repository.py  test_distributed.py  test_edge_cases.py  test_graceful_degradation.py  test_idempotency.py  test_insights.py  test_jwt_auth.py  test_kafka_publisher.py  test_llm_gateway.py  test_observability.py  test_outbox.py  test_pii.py  test_production_hardening.py  test_search.py  test_secret_settings.py  test_security.py  test_sentiment.py  test_streaming.py
tests/fixtures/synthetic/: README.md  gen_synthetic.py
tests/fixtures/synthetic/all_neutral/weekly_status/: events.json  meeting-info.json  speaker-meta.json  speakers.json  summary.json  transcript.json
tests/fixtures/synthetic/customer_unicode/apostrophe/: meeting-info.json  speaker-meta.json  speakers.json  summary.json  transcript.json
tests/fixtures/synthetic/customer_unicode/hyphenated/: meeting-info.json  summary.json  transcript.json
tests/fixtures/synthetic/customer_unicode/umlaut/: meeting-info.json  speakers.json  summary.json  transcript.json
tests/fixtures/synthetic/historical_incident/postmortem_review/: events.json  meeting-info.json  speakers.json  summary.json  transcript.json
tests/fixtures/synthetic/internal_mentions_customer/account_strategy_internal/: events.json  meeting-info.json  speaker-meta.json  speakers.json  summary.json  transcript.json
tests/fixtures/synthetic/multi_incident/dual_outage_review/: events.json  meeting-info.json  speaker-meta.json  speakers.json  summary.json  transcript.json
tests/fixtures/synthetic/net_new_product/comply_vault_intro/: meeting-info.json  speakers.json  summary.json  transcript.json
tests/fixtures/synthetic/net_new_product/detect_plus_preview/: meeting-info.json  speakers.json  summary.json  transcript.json
tests/fixtures/synthetic/single_sentence/quick_sync/: events.json  meeting-info.json  speaker-meta.json  speakers.json  summary.json  transcript.json
tests/fixtures/synthetic/title_variants/aegis_no_separator/: meeting-info.json  summary.json
tests/fixtures/synthetic/title_variants/multi_word_escalation/: events.json  meeting-info.json  speakers.json  summary.json
tests/load/: run_load_test.py
web/: admin.html  index.html
web/static/: admin.css  admin.js  app.js  style.css
(+7 files in other folders)
