[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript-intelligence"
version = "0.1.0"
description = "Topic categorization, sentiment analysis, and strategic insights for B2B meeting transcripts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "plotly>=5.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "markdown>=3.4",
    "pygments>=2.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "jupyter>=1.0",
]

[project.scripts]
transcript-pipeline = "run_analysis:main"
transcript-validate = "validate:main"
transcript-build-docs = "build_docs:build"

[tool.setuptools.packages.find]
include = ["src*", "api*"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["output", "docs/html"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "RET",           # return statements
    "SIM",           # simplify
    "TID",           # tidy imports
    "PL",            # pylint subset
]
ignore = [
    "PLR0913",  # too many args (analytical funcs are fine)
    "PLR0915",  # too many statements (pipeline orchestrators)
    "PLR2004",  # magic numbers (config has many)
    "E501",     # line too long (formatter handles)
    "E702",     # multi-statement lines (visualization compactness)
    "UP045",    # Optional[X] — kept for Python 3.9 compatibility
    "B008",     # function-call in default arg (FastAPI Query idiom)
    "RET504",   # unnecessary-assign (style preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "B007"]
"src/config.py" = ["E501"]
"api/state.py" = ["PLW0603"]  # singleton pattern uses global
"validate.py" = ["PLC0415", "B007"]  # local import for circular avoidance

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # gradual; tighten over time
ignore_missing_imports = true
files = ["src", "api", "tests"]

[[tool.mypy.overrides]]
module = ["matplotlib.*", "seaborn.*", "sklearn.*", "plotly.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --cov=src --cov=api --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
source = ["src", "api"]
omit = ["src/visualizations.py"]  # tested via integration

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
