[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript-intelligence"
version = "0.1.0"
description = "Topic categorization, sentiment analysis, and strategic insights for B2B meeting transcripts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "plotly>=5.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.40b0",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "sentry-sdk[fastapi]>=2.0",
    "markdown>=3.4",
    "pygments>=2.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "pip-audit>=2.7",
    "ruff>=0.4",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "jupyter>=1.0",
    "fakeredis>=2.20",  # in-memory Redis for cluster-wide rate-limit + Arq tests
    "pyotp>=2.9",       # TOTP-based admin MFA
]

[project.scripts]
transcript-pipeline = "run_analysis:main"
transcript-validate = "validate:main"
transcript-build-docs = "build_docs:build"

[tool.setuptools.packages.find]
include = ["src*", "api*"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"
# gemma-finetune/ is the standalone workshop fine-tuning project — has its own
# conventions and runs in a different env (Linux + CUDA). See its README.
extend-exclude = ["output", "docs/html", "gemma-finetune"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "RET",           # return statements
    "SIM",           # simplify
    "TID",           # tidy imports
    "PL",            # pylint subset
]
ignore = [
    "PLR0913",  # too many args (analytical funcs are fine)
    "PLR0915",  # too many statements (pipeline orchestrators)
    "PLR2004",  # magic numbers (config has many)
    "E501",     # line too long (formatter handles)
    "E702",     # multi-statement lines (visualization compactness)
    "UP006",    # non-pep585-annotation (List/Dict) — Python 3.9 compat
    "UP035",    # deprecated-import (typing.List) — Python 3.9 compat
    "UP045",    # Optional[X] — Python 3.9 + Pydantic compat
    "B008",     # function-call in default arg (FastAPI Query / Depends idiom)
    "RET504",   # unnecessary-assign (style preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "B007", "PLC0415"]   # lazy imports for app reload
"src/config.py" = ["E501"]
"src/settings.py" = ["PLC0415"]              # lazy runtime_settings import (circular)
"src/runtime_settings.py" = ["PLW0603", "PLC0415", "PLR0911"]  # singletons + lazy imports + type-coerce branches
"src/insights.py" = ["PLC0415"]              # lazy runtime_settings import (notebook safety)
"src/db.py" = ["PLW0603", "PLC0415"]         # singleton + lazy model registration
"src/repository.py" = ["PLC0415"]            # lazy config import to avoid circular
"src/streaming.py" = ["PLC0415"]             # lazy `time` import inside function for clarity
"run_analysis.py" = ["PLC0415"]              # lazy streaming-mode imports gated on --streaming flag
"api/state.py" = ["PLW0603", "PLC0415"]      # singleton + lazy snapshot/runtime imports
"api/observability.py" = ["PLC0415"]         # lazy imports gated on settings
"api/middleware.py" = ["PLC0415"]            # local state import avoids circular
"api/admin/auth.py" = ["PLC0415", "PLR0911"] # lazy imports + multi-branch verify_password
"api/admin/routes.py" = ["PLC0415"]          # lazy auth + totp + gdpr imports
"api/admin/totp.py" = ["PLC0415"]            # lazy runtime_settings via get_runtime
"api/admin/gdpr.py" = ["PLC0415", "TRY401"]  # lazy state + sqlalchemy imports
"api/csrf.py" = ["PLC0415"]                  # lazy runtime_settings import
"src/logging_config.py" = ["PLC0415"]        # lazy pii + runtime_settings (bootstrap order)
"api/main.py" = ["PLC0415"]                  # lazy router import
"api/admin_app.py" = ["PLC0415"]             # lazy db imports inside readiness probe
"api/idempotency.py" = ["PLC0415", "PLR0911"]  # lazy redis + runtime_settings + multiple return paths in dispatch
"api/jwt_auth.py" = ["PLC0415", "PLR0912"]   # lazy pyjwt + multi-branch HS/RS dispatch
"api/llm_gateway.py" = ["PLC0415"]           # lazy redis + provider clients
"api/outbox_kafka.py" = ["PLC0415"]          # lazy confluent-kafka import
"api/cache.py" = ["PLC0415", "PLW0603"]      # lazy redis + module-level singletons
"api/search.py" = ["PLC0415"]                # lazy opensearch-py + runtime_settings
"api/outbox.py" = ["PLC0415"]                # lazy sqlalchemy func + opentelemetry imports
"api/metrics.py" = ["PLC0415", "PLW0603"]    # lazy sqlalchemy + module-level singleton flag
"api/circuit_breaker.py" = ["PLC0415"]       # lazy metrics import in best-effort hook
"api/adaptive_throttle.py" = ["PLC0415"]     # lazy metrics import
"api/backpressure.py" = ["PLW0603", "SLF001"]   # singleton handle for /api/ready
"api/snapshot.py" = ["PLC0415"]              # lazy fsspec import (optional dep)
"api/snapshot_writer.py" = ["PLC0415"]       # lazy runtime_settings import
"api/limiter.py" = ["PLC0415"]               # lazy redis probe
"api/jobs.py" = ["PLC0415"]                  # lazy arq + settings imports
"api/routes.py" = ["PLC0415"]                # lazy db + state imports in /api/ready
"validate.py" = ["PLC0415", "B007"]          # local import avoids circularity

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # gradual; tighten over time
ignore_missing_imports = true
files = ["src", "api", "tests"]
exclude = ["gemma-finetune"]

[[tool.mypy.overrides]]
module = ["matplotlib.*", "seaborn.*", "sklearn.*", "plotly.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --cov=src --cov=api --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
source = ["src", "api"]
omit = ["src/visualizations.py"]  # tested via integration

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
